--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "apisauce": "^2.1.5",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
