--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
+    "d3": "^7.4.2",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.1.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
@@ -24,6 +27,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
